--- a/.github/workflows/test_latest_mupdf.yml
+++ b/.github/workflows/test_latest_mupdf.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-20.04, windows-2019, macos-10.15]
 
     steps:
 
