Revert all changes to workflows made on branch 1.21 since it branched off master.
This is the first stage of moving all PyMuPDF development to a new master
branch, and mothballing branch 1.21.

All recent PyMuPDF code/docs development has been on branch 1.21. But Github
workflows are on branch master because Github doesn't make it easy for
workflows to be on a non-master branch.

Also, the use of a separate release branch isn't really helping PyMuPDF
development, because we don't generally release patches for old releases, and
we've recently started testing the most recent PyMuPDF with different versions
of MuPDF, using a small number of #if...#endif constructs in the code to work
with the occasional changes to MuPDF APIs. This is much simpler in practise
than, for example, having a separate branch of PyMuPFD for each MuPDF 1.xx
release.

So we are moving everything to branch master, which will avoid the need to
maintain and work with separate branches/checkouts for code/docs, workflows or
different versions of MuPDF.

Due to various confusions on my part about how Github workflows operate, there
are a small number of unused workflow-related commits on branch 1.21. And there
are also a small number of unused code-related commits on branch master.

So to create a single master branch, we are doing the following:

1 This commit: revert the small number of unused commits to workflows that were
  made on branch 1.21 since it branched off master.

2 Cherry-pick all workflow-related commits on master to branch 1.21.
  Branch 1.21 will then contain everything - all code/docs, and all workflow
  scripts and signatures/version1/cla.json state.

3 Rename branch 1.21 to branch master, and force push the new master to Github.

4 Branch 1.21 will be unchanged on Github. To avoid confusion, reset local
  branch 1.21 back to where it was prior to step 1.

Notes about changing history:

* We could have simply deleted the workflow-related commits on branch 1.21
  instead of revertin

--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -1,5 +1,6 @@
 name: Build wheels
 
+#on: [push, pull_request]
 on:
   workflow_dispatch:
     inputs:
@@ -8,8 +9,6 @@ on:
       wheels:
         type: boolean
       wheels_linux_aarch64:
-        type: boolean
-      wheels_macos_arm64:
         type: boolean
 
 jobs:
@@ -72,9 +71,11 @@ jobs:
             #
             CIBW_SKIP: "pp* *i686 *-musllinux_* cp36*"
             
-            # On Linux and MacOS, tell cibuildwheel to build archs depending on
-            # inputs.wheels_linux_aarch64 and inputs.wheels_macos_arm64.
+            # On Linux, tell cibuildwheel to build native archs ('auto'), and
+            # aarch64.
             #
+            #CIBW_ARCHS_LINUX: auto aarch64
+            
             # https://github.community/t/possible-to-use-conditional-in-the-env-section-of-a-job/135170
             # Note that it seems that there must not be a space after the ':' in the following, i.e.
             # ok:   {"false":"auto", "true":"auto aarch64"}
@@ -83,11 +84,10 @@ jobs:
             # This is useful: https://yamlchecker.com/
             #
             CIBW_ARCHS_LINUX: ${{ fromJSON('{"false":"auto", "true":"auto aarch64"}')[inputs.wheels_linux_aarch64] }}
-            CIBW_ARCHS_MACOS: ${{ fromJSON('{"false":"auto", "true":"auto arm64"}')[inputs.wheels_macos_arm64] }}
 
             # For testing, build for single python version.
             #
-            #CIBW_BUILD: "cp311*"
+            #CIBW_BUILD: "cp39*"
 
             # Get cibuildwheel to run pytest with each wheel.
             #
