.github/workflows/: test classic and rebased.
We now run pytest via tests/run_compound.py.

Also disabled cron tests that are known to fail - rebased implementation
requires latest mupdf master.

--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -102,7 +102,7 @@ jobs:
             # running pytest.
             #
             CIBW_TEST_REQUIRES: "fontTools pytest"
-            CIBW_TEST_COMMAND: "pytest -s {project}/tests"
+            CIBW_TEST_COMMAND: "python {project}/tests/run_compound.py pytest -s {project}/tests"
             CIBW_BUILD_VERBOSITY: 3
 
       # Upload generated wheels, to be accessible from github Actions page.
