--- a/.github/workflows/test_mupdf-master-branch.yml
+++ b/.github/workflows/test_mupdf-master-branch.yml
@@ -49,5 +49,5 @@ jobs:
 
             # Get cibuildwheel to run pytest with each wheel.
             CIBW_TEST_REQUIRES: "fontTools pytest"
-            CIBW_TEST_COMMAND: "pytest -s {project}/tests"
+            CIBW_TEST_COMMAND: "python {project}/tests/run_compound.py pytest -s {project}/tests"
             CIBW_BUILD_VERBOSITY: 3
